# SpaceMaquette

./: .gitignore  SpaceMaquette.code-workspace  geminize.py  host-clearcore-protocol.md  package-lock.json  readme.md  space-maquette-hardware-setup.md
ClearCore/: CMakeLists.txt
ClearCore/inc/: LaserSensor.h  MotionController.h  NetworkInterface.h
ClearCore/src/: LaserSensor.cpp  MotionController.cpp  main.cpp
arduino-tilt-servo/includes/: TiltController.h  debug.h
arduino-tilt-servo/src/: TiltController.cpp  main.cpp
clearcore/: arduino-tilt-protocol.md  clearcore-readme.md  ethernet-clearcore-protocol.md  platformio.ini
clearcore/include/: command_handler.h  command_parser.h  configuration_manager.h  emergency.h  ethernet_device.h  macros.h  motion_control.h  rangefinder.h  serial_devices.h  stack-debug.h  tilt_servo.h  web_server.h
clearcore/src/: clearcore.code-workspace  command_handler.cpp  command_parser.cpp  configuration_manager.cpp  emergency.cpp  ethernet_device.cpp  main.cpp  motion_control.cpp  rangefinder.cpp  serial_devices.cpp  stack-debug.cpp  stack-debug.h  tilt_servo.cpp  web_server.cpp
clearcore/test/: test_command_parser.cpp  test_macros.cpp  test_rangefinder.cpp
clearcore_comms_test/: requirements.txt  setup.py
controller/: controller.py  protocol.py  pyproject.toml  simulator.py
controller/cli/: cli.py
space-maquette-frontend/: README.md  SETUP_AND_TESTING.md  component-structure.md  data-flow-diagram.md  requirements-analysis.md  todo.md  ui-mockups.md
tools/: start-test-watchers.bat  start-test-watchers.sh
(+91 files in other folders)
