[tool.poetry]
name = "space-maquette-controller"
version = "0.1.0"
description = "Controller interface for the Space Maquette system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "space_maquette"}]

[tool.poetry.dependencies]
python = ">=3.10"
pyserial = ">=3.5,<4.0"
pyyaml = ">=6.0.2,<7.0.0"
click = ">=8.1.8,<9.0.0"
prompt-toolkit = ">=3.0.50,<4.0.0"
rich = ">=13.9.4,<14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
space-maquette = "space_maquette.cli_main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true